# localunionparser

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
localunionparser/: __init__.py  learned_settings.crfsuite
tests/: test_tokenizing.py
training/: f7.xml
