[metadata]
name = localunionparser
version = 0.1
license = The MIT License: http://www.opensource.org/licenses/mit-license.php
description = A probabilistic parser for local union names
url = https://github.com/labordata/localunionparser
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = localunionparser
install_requires = python-crfsuite>=0.7

[options.package_data]
localunionparser = learned_settings.crfsuite
